--- a/P2/css/style.css
+++ b/P2/css/style.css
@@ -154,6 +154,9 @@ ul {
   padding: 10px;
   width: 200px;
   display: none;
+  -webkit-border-radius: 15%;
+  -moz-border-radius: 15%;
+  border-radius: 15%;
 }
 
 img {
